# task-manager-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 947d21691fdf_initial_migration.py
app/: database.py  main.py
app/core/: security.py
app/crud/: task.py  user.py
app/models/: task.py  user.py
app/routers/: auth.py  tasks.py
app/schemas/: task.py  user.py
src/task_manager_api/: create_tables.py  crud.py  main.py  models.py  schemas.py  security.py
