[project]
name = "task-manager-api"
version = "0.1.0"
description = ""
authors = [
    {name = "RobertoJr98",email = "rbsjr98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.134.0,<0.135.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "bcrypt (==4.0.1)",
    "python-multipart (>=0.0.22,<0.0.23)",
]

[tool.poetry]
packages = [{include = "task_manager_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
